evidence_library/EC2/regions/eu-west-3/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-09052627abadb7410",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0b7115f3a8b8e7be7",
            "SecurityGroupArn": "arn:aws:ec2:eu-west-3:111111111111:security-group/sg-09052627abadb7410",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-09052627abadb7410"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "27a95d83-1264-4ed3-b99f-38d900b18bf2",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "27a95d83-1264-4ed3-b99f-38d900b18bf2",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "960",
            "date": "Fri, 06 Feb 2026 16:25:29 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
